# test-map-my-world

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: validations.yml
bash/: build.sh  deploy_dev.sh
devops/: localhost.yml  service.Dockerfile
envs/: localhost.env
etc/http/: create_tables_GET.http
etc/http/categories/: categories_all_GET.http  create_category_POST.http
etc/http/locations/: create_location_POST.http  locations_all_GET.http
map_my_world/config/: __init__.py  config_envs.py  constants.py  db_envs.py
map_my_world/core/filters/: categories.py  locations.py
map_my_world/core/schemas/: categories.py  locations.py
map_my_world/core/services/: categories.py  generic.py  locations.py
map_my_world/dependencies/: repositories.py
map_my_world/shared/adapters/db/sql/: errors.py  sessions.py
map_my_world/shared/adapters/db/sql/decorators/: __init__.py  decorators.py
map_my_world/shared/adapters/db/sql/models/: __init__.py  base_class.py  categories.py  locations.py
map_my_world/shared/utils/: custom_fields.py
map_my_world/src/ports/rest/: main.py  router.py
map_my_world/src/ports/rest/ns/: categories.py  locations.py
